Release Notes

Release 3.6.2

Changes

     * Add 'A' command to re-run SQL statement and show actual execution plan
       (EXPLAIN ANALYZE) of a running query.
     * Fixed 'E' command (EXPLAIN) to be UPDATE and INSERT safe.
     * Updated the automake file so other targets like 'make dist' and
       'make distdir' work.
     * Fixed a bug so user table statistics can be sorted.
     * Added a 't' command so that user table and index statistics can
       display either cumulative or differential statistics.
     * Fixed support for OS X, tested on v10.4.x, v10.5.x.
     * Added support for OpenBSD, tested on v4.2.

Release 3.6.1

Changes
     * Add -h command line option to specify a socket file when connected to
       the database..
     * Use the same -p PORT, -U USER, and -d DBNAME options as other PostgreSQL
       programs.
     * Change unixtop's original -d to -x, and -U to -z.
     * Add 'X' command to view user index statistics.
     * Add 'R' command to view user table statistics.
     * Add support for Solaris 10.
     * Add support for FreeBSD.
     * Add 'E' command to re-determine and show execution plan of a running
       SQL statement.
     * Add parameters to specify database connection information.
     * Add 'L' command to show locks held by a process.
     * Add 'Q' command to show current query of a process.
     * Rename 'top' to 'ptop'.
     * Add support for Linux.
     * Configure support for PostgreSQL libpq client libraries.
     * Remove old_modules directory.
     * Update RES calculation for Linux 2.6.x.