@@ -1,4 +1,4 @@
-								  ptop
+								  pg_top
 							 Version 3.6.1
 
 							   Mark Wong
@@ -6,19 +6,19 @@
 
 							  INSTALLATION
 
-Configuration and installation of ptop is easy.  ptop version 3.6
+Configuration and installation of pg_top is easy.  pg_top version 3.6
 comes with a configure script generated by gnu autoconf.  After
 unpacking the tar file, simply run "./configure".  The script will
 automatically perform a series of checks on the system and determine
 what settings are appropriate for the Makefile and certain include
 files.  Once configure completes, simply type "make install" and
-ptop will be compiled and installed.  By default, the installation
+pg_top will be compiled and installed.  By default, the installation
 location is /usr/local/bin.  You can change the destination location
 with the --prefix option to configure.
 
-pg_config must be in your path in order to install ptop.
+pg_config must be in your path in order to install pg_top.
 
-In addition to the standard options, ptop's configure script supports
+In addition to the standard options, pg_top's configure script supports
 the following:
 
     --with-module=name
@@ -51,6 +51,6 @@ the following:
     --disable-kill
 
 	Default on.  Include code that allows for renicing and sending
-	signals to processes from within ptop (the 'kill' and 'renice'
+	signals to processes from within pg_top (the 'kill' and 'renice'
 	commands). Use --disable-kill if you do not want this feature
 	compiled in to the code.
