@@ -26,7 +26,7 @@
 #include <unistd.h>
 
 #include "sigdesc.h"			/* generated automatically */
-#include "ptop.h"
+#include "pg_top.h"
 #include "boolean.h"
 #include "utils.h"
 #include "version.h"
