@@ -20,7 +20,7 @@
 #else
 #undef DEBUG
 #endif
-#include "ptop.h"
+#include "pg_top.h"
 #include "utils.h"
 
 static int
